--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -15,7 +15,11 @@ bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
 
-unbind f
+# New Session with fzf
+#bind-key -r f run-shell "tmux neww ~/.local/scripts/tmux-sessionizer"
+
+bind-key -r f run-shell "tmux neww ~/.local/scripts/tmux-sessionizer"
+
 unbind Up
 unbind Down
 unbind Left
