--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -23,6 +23,7 @@
 # monitor = name, resolution, position, scale
 monitor = DP-1, 2560x1440@144, 2560x0, 1
 monitor = HDMI-A-3, 2560x1440@144, 0x0, 1
+monitor = , preffered, auto, 1
 
 ###################
 ### MY PROGRAMS ###
@@ -201,6 +202,8 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, F, fullscreen
+bind = $mainMod, SHIFT SPACE, toggleFloating
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
