--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -18,7 +18,7 @@ bind -r l select-pane -R
 # New Session with fzf
 #bind-key -r f run-shell "tmux neww ~/.local/scripts/tmux-sessionizer"
 
-bind-key -r f run-shell "tmux neww ~/.local/scripts/tmux-sessionizer"
+bind-key -n C-f run-shell "tmux neww ~/.local/scripts/tmux-sessionizer"
 
 unbind Up
 unbind Down
@@ -38,7 +38,7 @@ set -g status-position bottom
 set -g status-style "fg=color4"
 set -g status-justify left
 set -g status-left ""
-set -g status-right "(#(whoami)) %R %a %d-%m-%Y"
+set -g status-right "(#(whoami))"
 
 set-window-option -g window-status-current-style "fg=color0 bg=blue bold"
 set-window-option -g window-status-current-format " #I #W #F "
@@ -48,3 +48,4 @@ set-window-option -g window-status-format " #I #[fg=color8] #W #[fg=blue] #F "
 set -g mouse on
 
 set -g mode-style "fg=white,bg=grey"
+set -g base-index 1
