--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -1,72 +1,58 @@
-{
-	"output": "DP-1",
+[
+	{
+		"output": "DP-1",
+		"layer": "bottom",
+		"position": "top",
+		"height": 40,
+		"spacing": 25,
 
-	"layer": "top",
-    "spacing": 0,
-    "height": 0,
+		"modules-left": ["hyprland/workspaces"],
+		"modules-right": ["cpu", "memory", "pulseaudio", "clock"],
+		"hyprland/workspaces": {
+			"format": "{name}",
+			"disable-scroll": true
+		},
+		"network": {
+			"format": "{icon}",
+			"format-alt": "{ipaddr}/{cidr} {icon}",
+			"format-alt-click": "click-right",
+			"format-icons": {
+				"wifi": ["", "" ,""],
+				"ethernet": [""],
+				"disconnected": [""]
+			},
+			"on-click": "termite -e nmtui",
+			"tooltip": false
+		},
+		"cpu": {
+			"format": "CPU: {usage}%",
+			"interval": 2
+		},
+		"memory": {
+			"interval": 30,
+			"format": "RAM: {used:0.1f}G/{total:0.1f}G"
+		},
+		"pulseaudio": {
+			"scroll-step": 5,
+			"max-volume": 150,
+			"format": "{volume}%",
+			"on-click": "pavucontrol"
+		},
+		"clock": {
+			"format": "{:%R %a %d-%m-%Y}",
+			"tooltip": false
+		}
+	},
+	{
+		"output": "HDMI-A-3",
+		"layer": "bottom",
+		"position": "top",
+		"height": 40,
 
-    "margin-top": 8,
-    "margin-right": 8,
-    "margin-bottom": 0,
-    "margin-left": 8,
-
-    "modules-left": [
-        "hyprland/workspaces"
-    ],
-
-    "modules-right": [
-        "tray",
-        "cpu",
-        "memory",
-        "network",
-        "pulseaudio"
-    ],
-
-    "hyprland/workspaces": {
-        "disable-scroll": true,
-        "all-outputs": true,
-        "tooltip": false,
-		"move-to-monitor": true
-    },
-
-    "tray": {
-        "spacing": 10,
-        "tooltip": false
-    },
-
-    "cpu": {
-        "format": "cpu {usage}%",
-        "interval": 2,
-
-        "states": {
-            "critical": 90
-        }
-    },
-
-    "memory": {
-        "format": "mem {percentage}%",
-        "interval": 2,
-
-        "states": {
-            "critical": 80
-        }
-    },
-
-    "network": {
-        "format-wifi" : "wifi {bandwidthDownBits}",
-        "format-ethernet": "enth {bandwidthDownBits}",
-        "format-disconnected" : "no network",
-        "interval": 5,
-        "tooltip": false
-    },
-
-    "pulseaudio": {
-        "scroll-step": 5,
-        "max-volume": 150,
-        "format": "vol {volume}%",
-        "format-bluetooth": "vol {volume}%",
-        "nospacing": 1,
-        "on-click": "pavucontrol",
-        "tooltip": false
-    }
-}
+		"modules-left": ["hyprland/workspaces"],
+		"hyprland/workspaces": {
+			"format": "{name}",
+			"disable-scroll": true
+		}
+	}
+]
